WIP: Build Mandrel with labs-openjdk JVMCI module